--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "buffer": "^6.0.3",
     "chart.js": "^4.2.1",
     "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.0.3",
     "https-browserify": "^1.0.0",
     "moment": "^2.29.4",
     "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
